Fix image stretching in customer head class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,7 @@ i {
     height: 75px;
     width: 75px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 
